--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 50px;
+  background-color: #EFEFEF;
+}
+
+h1 {
+  color: #8885;
+}
+
+p {
+  background-color: #999;
+  padding: 10px;
 }
 
 code {
